--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,15 @@
+bind | split-window -h
+bind - split-window -v
+set -g default-terminal "screen-256color"
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
+set -g prefix C-a
+bind C-a send-prefix
 bind-key C-a send-prefix
+
+# reload the .tmux.conf file with Ctrl-r
+bind r source-file ~/.tmux.conf\; display-message "configuration reloaded"
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -11,3 +19,49 @@ bind -n M-Down select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# modes
+setw -g clock-mode-colour colour135
+setw -g mode-style 'fg=colour196 bg=colour238 bold'
+
+# panes
+set -g pane-border-style 'fg=colour238 bg=colour235'
+set -g pane-active-border-style 'fg=colour208 bg=colour236'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour166 fg=colour131 dim'
+# set -g status-style 'bg=colour234 fg=colour131 dim'
+set -g status-interval 2
+set -g status-left ''
+# set -g status-right '#{prefix_highlight} #(gitmux #{pane_current_path}) #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#{prefix_highlight} #[fg=colour231,bg=colour04]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default] #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+# set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-style 'fg=colour172 bg=colour238 bold'
+# setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour226]#F '
+
+setw -g window-status-style 'fg=colour138 bg=colour235 none'
+# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour232 bg=colour166 bold'
+set -g message-command-style 'fg=blue bg=black'
