--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,12 +42,17 @@ set -g pane-active-border-style 'fg=colour208 bg=colour236'
 # statusbar
 set -g status-position bottom
 set -g status-justify left
-set -g status-style 'bg=colour166 fg=colour131 dim'
+# green
+set -g status-style 'bg=colour71 fg=colour131 dim'
+# orange
+# set -g status-style 'bg=colour166 fg=colour131 dim'
+# grey
 # set -g status-style 'bg=colour234 fg=colour131 dim'
 set -g status-interval 2
 set -g status-left ''
 # set -g status-right '#{prefix_highlight} #(gitmux #{pane_current_path}) #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right '#{prefix_highlight} #[fg=colour231,bg=colour04]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default] #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+# with date and time
 # set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
@@ -63,5 +68,8 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
 # messages
-set -g message-style 'fg=colour232 bg=colour166 bold'
+# green
+set -g message-style 'fg=colour232 bg=colour71 bold'
+# orange
+# set -g message-style 'fg=colour232 bg=colour166 bold'
 set -g message-command-style 'fg=blue bg=black'
