--- a/.skhdrc
+++ b/.skhdrc
@@ -86,8 +86,8 @@ cmd + shift - return : code
 cmd + alt - t : open -na firefox
 
 # focus window
-alt - h : yabai -m window --focus west
-alt - l : yabai -m window --focus east
+alt - h : yabai -m window --focus west || yabai -m display --focus prev
+alt - l : yabai -m window --focus east || yabai -m display --focus next
 alt - j : yabai -m window --focus south
 alt - k : yabai -m window --focus north
 
@@ -135,10 +135,6 @@ alt - 6 : yabai -m space --focus 6
 alt - 7 : yabai -m space --focus 7
 alt - 8 : yabai -m space --focus 8
 
-# focus on next/prev occupied window
-alt - q : ~/scripts/nextprev.sh prev
-alt - e : ~/scripts/nextprev.sh next
-
 # focus on next/prev window
 alt + ctrl - q : yabai -m space --focus prev
 alt + ctrl - e : yabai -m space --focus next
@@ -147,7 +143,12 @@ alt + ctrl - e : yabai -m space --focus next
 alt - p : yabai -m window --focus stack.prev || yabai -m window --focus stack.last
 alt - n : yabai -m window --focus stack.next || yabai -m window --focus stack.first
 
-# send window to next/prev window
+# focus on next/prev occupied window
+# alt - q : ~/scripts/nextprev.sh prev
+# alt - e : ~/scripts/nextprev.sh next
+alt - o : yabai -m window --focus recent
+
+# send window to next/prev space
 alt + shift - q : yabai -m window --space prev
 alt + shift - e : yabai -m window --space next
 
@@ -185,11 +186,10 @@ alt + ctrl - j : yabai -m window --resize bottom:0:20;yabai -m window --resize t
 alt + ctrl - k : yabai -m window --resize top:0:-20;yabai -m window --resize bottom:0:-20
 
 # set insertion point in focused container
-# ctrl + alt - h : yabai -m window --insert west
-
-# toggle window zoom
-# alt - d : yabai -m window --toggle zoom-parent
-# alt - f : yabai -m window --toggle zoom-fullscreen
+ctrl + cmd - h : yabai -m window --insert west
+ctrl + cmd - l : yabai -m window --insert east
+ctrl + cmd - k : yabai -m window --insert north
+ctrl + cmd - j : yabai -m window --insert south
 
 # toggle window split type
 alt - e : yabai -m window --toggle split
@@ -205,6 +205,10 @@ alt - s : yabai -m space --layout stack
 
 # go zoom fullscreen
 alt - f : yabai -m window --toggle zoom-fullscreen
+
+# toggle window zoom
+# alt - d : yabai -m window --toggle zoom-parent
+# alt - f : yabai -m window --toggle zoom-fullscreen
 
 # close window yabai way, not overriding system default
 alt - w : yabai -m window --close
