--- a/.skhdrc
+++ b/.skhdrc
@@ -77,7 +77,8 @@
 # ############################################################### #
 
 # open iterm
-cmd - return : osascript -e 'tell application "iTerm2" to create window with default profile command ""' || open -na iTerm
+# cmd - return : osascript -e 'tell application "iTerm2" to create window with default profile command ""' || open -na iTerm
+cmd - return : open -na hyper
 
 # open vscode
 cmd + shift - return : code
