--- a/.yabairc
+++ b/.yabairc
@@ -32,8 +32,8 @@ yabai -m config active_window_border_color  "0xE0${focused_border_color}"
 yabai -m config normal_window_border_color  "0x00${normal_border_color}"
 
 yabai -m config insert_feedback_color        0xaad75f5f
-yabai -m config split_ratio                  0.50
-yabai -m config auto_balance                 on
+yabai -m config split_ratio                  0.75
+yabai -m config auto_balance                 off
 yabai -m config mouse_modifier               fn
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
@@ -64,6 +64,7 @@ yabai -m rule --add app="^Franz$" space=1
 # yabai -m rule --add app="^Steam$" space=7 manage=off
 # yabai -m rule --add app="^System Preferences$" manage=off
 yabai -m rule --add label="Firfox PIP" app="^Firefox$" title="^(Picture-in-Picture)$" manage=off
+yabai -m rule --add label="Stats" app="^Stats$" manage=off
 
 # signals
 # yabai -m signal --add event=window_destroyed action="yabai -m query --windows --window &> /dev/null || yabai -m window --focus mouse"
